étapes 1 et 2 - affichage nom de ville et coordonnées GPS

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
     <div class="weather-container">
         <div class="city-search">
-            <input type="text" id="cityInput" placeholder="Entrez un nom de ville">
-            <button>OK</button>
+            <input type="text" id="city-input" placeholder="Entrez un nom de ville">
+            <button id="btn-ok">OK</button>
         </div>
         <h1 id="city">Chargement...</h1>
         <div id="gps"></div>
