ajout infos précipitations et humidité

--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
         <h1 id="city">Chargement...</h1>
         <div id="gps"></div>
         <div id="temperature">-°C</div>
+        <div id="rain-humidity">
+            <span id="rain"> Précipitations : - mm | </span> <span id="humidity">Taux d'humidité : - %</span> 
+        </div>
         <div id="details">Mise à jour en cours...</div>
     </div>
 
